--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,9 @@
     "files.exclude": {
         "**.gitignore": true,
         "**package-lock.json": true,
-        "**node_modules": true,
+        // "**node_modules": true,
         "**build": true,
-        // "**public": true,
+        "**public": true,
         // // "**package.json": true,
         // "**.env": true,
 
