--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react-redux": "^7.2.6",
     "react-router-redux": "^4.0.8",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
