--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
         "**package-lock.json": true,
         // "**node_modules": true,
         "**build": true,
-        "**public": true,
+        // "**public": true,
         // // "**package.json": true,
         // "**.env": true,
 
