--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
 
         "**src/*.test.js": true,
 
-        "**src/index.js": true,
+        // "**src/index.js": true,
         "**README.md": true,
     },
 }
