--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "express": "^4.17.3",
+    "history": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router": "^6.3.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
