--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "**src/*.test.js": true,
 
         "**src/index.js": true,
+        // "**src/index.css": true,
         "**README.md": true,
         // "**_TODO.txt": true,
 
