--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.exclude": {
-        "**.gitignore": true,
+        // "**.gitignore": true,
         "**package-lock.json": true,
         "**node_modules": true,
         "**build": true,
@@ -14,10 +14,10 @@
 
         "**src/index.js": true,
         // "**src/index.css": true,
-        "**README.md": true,
+        // "**README.md": true,
         // "**_TODO.txt": true,
 
         // "src/hooks": true,
-        "src/contexts": true,
+        // "src/contexts": true,
     },
 }
