--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-to-do",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "homepage": "https://dmitrKuznetsov.github.io/react-to-do",
   "private": true,
   "dependencies": {
     "@emotion/babel-plugin": "^11.7.2",
@@ -17,20 +18,22 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
-    "react-lorem-ipsum": "^1.4.10",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   },
   "scripts": {
     "server": "node backend/server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
